--- a/instagram_layout/flex/flex.css
+++ b/instagram_layout/flex/flex.css
@@ -19,25 +19,71 @@ body {
     height: 100vh;
 }
 
-#container4 {
+#container1 {
     border: 1px solid gray;
     display: flex;
-    width: 650px;
-    height: 7%;
+    height: 6%;
     background-color: black;
     font-size: 30px;
     color: white;
     padding: 20px;
 }
 
-#container5 {
+#container2 {
     border: 1px solid gray;
     display: flex;
-    width: 650px;
-    height: 12%;
+    height: 10%;
     background-color: black;
     font-size: 30px;
     color: white;
+    padding: 20px;
+}
+
+#container3 {
+    border: 1px solid gray;
+    display: flex;
+    background-color: black;
+    font-size: 30px;
+    color: white;
+}
+
+#container4 {
+    display: flex;
+    height: 5%;
+    align-items: center;
+    background-color: black;
+    color: white;
+    padding: 20px 20px 0px 20px;
+}
+
+#container5 {
+    display: flex;
+    height: 3%;
+    align-items: center;
+    background-color: black;
+    font-size: 30px;
+    color: white;
+    padding: 20px 20px 0px 20px;
+}
+
+#container6 {
+    display: flex;
+    height: 25%;
+    align-items: flex-start;
+    background-color: black;
+    font-size: 30px;
+    color: white;
+    padding: 15px 20px 20px 20px;
+}
+
+#container7 {
+    border: 1px solid gray;
+    display: flex;
+    height: 5%;
+    background-color: black;
+    color: white;
+    align-items: center;
+    justify-content: space-around;
     padding: 20px;
 }
 
@@ -46,57 +92,13 @@ i {
     padding: 5px 10px;
 }
 
-#container1 {
-    display: flex;
-    width: 650px;
-    height: 3%;
-    align-items: center;
-    background-color: black;
-    color: white;
-    padding: 20px;
-}
-
-#container2 {
-    border: 1px solid gray;
-    display: flex;
-    width: 650px;
-    height: 5%;
-    background-color: black;
-    color: white;
-    padding: 20px;
-    align-items: center;
-    justify-content: space-around;
-}
-
-#container3 {
-    display: flex;
-    width: 650px;
-    height: 3%;
-    align-items: center;
-    background-color: black;
-    font-size: 30px;
-    color: white;
-    padding: 20px;
-}
-
-#container6 {
-    display: flex;
-    width: 650px;
-    height: 25%;
-    align-items: flex-start;
-    background-color: black;
-    font-size: 30px;
-    color: white;
-    padding: 20px;
-}
-
 .fa-heart {
     color: red;
 }
 
 .fa-bookmark {
     position: relative;
-    left: 455px;
+    left: 415px;
 }
 
 .fa-ellipsis-h {
@@ -126,62 +128,21 @@ i {
     font-weight: lighter;
     font-size: 20px;
 }
-/*
-img.middle {
-    display: flex;
-    border: 0px solid;
-}
 
-i:nth-child(1) {
-    flex-direction: column;
-    text-align: center;
-    padding: 10px;
-}
-
-i:nth-child(2) {
-    display: flex;
-    border: 1px solid gray;
-    flex-direction: row;
-    text-align: center;
+.top_image {
+    width: 60px;
+    height: 60px;
     align-items: center;
-    height: 5%;
-    font-size: 1.2rem;
-    padding: 10px;
-    float: left;
-    width: 10px;
+    margin: 10px;
 }
 
-.item:nth-child(2) {
-    border: 1px solid gray;
-    height: 8%;
-    background-color: rgb(29, 29, 29);
-    font-size: 0.9rem;
+.middle_image {
+    width: 650px;
+    height: 650px;
+    object-fit: cover;
 }
 
-i.fas fa-heart {
-    height: 6%;
-    font-size: 1.5rem;
-    color: rgb(243, 66, 66);
-    padding: 10px;
+.bottom_image {
+    width: 40px;
+    height: 40px;
 }
-
-.item:nth-child(8) {
-    height: 4%;
-    font-size: 1rem;
-}
-
-.item:nth-child(9) {
-    height: 9%;
-    align-items: flex-start;
-    font-size: 0.7rem;
-}
-
-.item:nth-child(10) {
-    border: 1px solid gray;
-    height: 6%;
-}
-
-i {
-    border: 1px solid gray;
-    height: 5%;
-}*/
